--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
 
+body{
+    background-color: #1b1e31;
+}
+
 #title{
     font-family: 'Courier New', Courier, monospace;
     display: flex;
@@ -11,28 +15,69 @@
     font-size: xx-large;
 }
 
+img {
+    height: 100px;
+    width: 100px;
+}
+
 button {
-    background-color: #f25c5a;
+    background-color: #1b1e31;
     color: #1b1e31;
     transition-delay: 0.4s;
     height: 100px;
     width: 100px;
 }
 
-img {
-    height: 100px;
-    width: 100px;
-}
-
 button:hover {
-    background-color: #1b1e31;
     color: #f25c5a;
     border-color: #f25c5a;
 
 }
 
-body{
+#Buttons{
+    display: flex;
+    flex-direction: column;
+    background-color: #4a4e68;
+    padding: none;
+    flex-wrap: wrap;
+    width: 500px;
+    height: 800px;
+    justify-content: space-evenly;
+    flex: 10%;
+}
+
+#clicky{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
     background-color: #9a8d98;
+    flex: 70%;
+}
+
+#gobbagool{
+    background-color: #9a8d98;
+    border: none;
+    height: 600px;
+    width: 600px;
+    transition: 0.5s;
+}
+#gobbagool:hover{
+    background-color: #9a8d98;
+    border: none;
+    height: 700px;
+    width: 700px;
+}
+
+
+#gobbaImg{
+    height: auto;
+    width: auto;
+}
+#gobbaImg:hover{
+    height: 700px;
+    width: 700px;
 }
 
 #collums{
@@ -56,30 +101,4 @@ body{
     padding: none;
 }
 
-#clicky{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
 
-#Buttons{
-    display: flex;
-    flex-direction: column;
-    background-color: #4a4e68;
-    padding: none;
-    flex-wrap: wrap;
-    width: 500px;
-    height: 800px;
-}
-
-#gobbagool{
-    border-radius: 12px;
-    background-color: #4a4e68;
-    color: #f25c5a;
-}
-
-#gobbaImg{
-    size: 600px;
-}
