--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ p{ /* Formats the paragraphs */
 
 button { /* Formats the buttons */
     background-color: #1b1e31;
-    color: #1b1e31;
+    color: #f25c5a;
     transition-delay: 0.4s;
     height: 100px;
     width: 100px;
